--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
-    "@types/lodash": "^4.17.20"
+    "@types/lodash": "^4.17.20",
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0",
+    "typescript": "^5.8.3"
   }
 }
